     when an attempt is made to use any invalid rate name (including
     those that were previously valid).

   - A new OFDM error rate model for WiFi (NistErrorRateModel); this model
     has been validated in clear-channel testbed tests.  For 802.11b, it
     uses the same underlying model as the YansErrorRateModel, but it differs
     from YansErrorRateModel for OFDM modes (802.11a/g).

   - A brand new NS-2 mobility trace reader supports BonnMotion, SUMO, TraNS, 
     etc. traces.

   - An energy model for nodes and devices, including an energy source
     model and device energy models allowing energy-aware devices
     to notify the energy source about energy consumption.  

Bugs fixed
----------
The following lists many of the bugs that were fixed since ns-3.7, in
many cases referencing the Bugzilla bug number

   - IPv4 global routing code; stub networks were assumed to be /24
     and added as /24 networks even if the mask is actually different
   - bug 842 - ns-3-dev crashes using block acks
   - OLSR was generating messages on non-OLSR interfaces
   - bug 861 - Forwarding drops (due to no route found) were not being logged 
               in IPv4 or IPv6 ascii traces
   - ICMPv4 objects not properly registered; affected serialization code
   - bug 875 - Set FCS included flag in Radiotap header
   - bug 702 - Global routing doesn't respond to interface events
   - bug 906 - NSC TCP socket fork did not copy txbuffersize over
   - bug 828: PacketSocket::Close does not unregister protocol handler
   - bug 900:  RawTextConfigLoad::Default does not load configurations
   - bug 858 - support MSG_PEEK in IPv4/IPv6 raw socket
   - bug 932 - Support IP_HDRINCL option for Ipv4RawSocket
   - bug 871 - naming for WifiPhyStandard
   - bug 946 - Rocketfuel topology dataset support for topology reader
   - bug 881 - Reorganise to allow wider use of WifiInformationElement
   - bug 671 - add packet-info-tag.cc for IP_PKTINFO/IPV6_PKTINFO

Known issues
------------
